# QHull

./: CMakeLists.txt  QHull.cpp  QHull.h  QHull_py.py  binder.cpp  main.cpp  run.py  utils.cpp  utils.h  utils.py
python/: QHull.py  utils.py
